--- a/MoneySplitter.Win10/Strings/Ru.resw
+++ b/MoneySplitter.Win10/Strings/Ru.resw
@@ -117,10 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="LOGIN_BUTTON" xml:space="preserve">
+  <data name="LOGIN_BUTTON_CONTENT" xml:space="preserve">
     <value>ЛОГИН</value>
   </data>
-  <data name="REGISTER_BUTTON" xml:space="preserve">
+  <data name="REGISTER_BUTTON_CONTENT" xml:space="preserve">
     <value>ЗАРЕГИСТРИРОВАТЬСЯ</value>
   </data>
 </root>
