--- a/MoneySplitter.Win10/Strings/Ru.resw
+++ b/MoneySplitter.Win10/Strings/Ru.resw
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ADD_BUTTON_CONTENT" xml:space="preserve">
+    <value>Добавить</value>
+    <comment>UserControl</comment>
+  </data>
+  <data name="ADD_HIGH_REGISTR_BUTTON_CONTENT" xml:space="preserve">
+    <value>ДОБАВИТЬ</value>
+    <comment>Transactions</comment>
+  </data>
+  <data name="APROVE_ALL_BUTTON_CONTENT" xml:space="preserve">
+    <value>ПОТВЕРДИТЬ ВСЁ</value>
+    <comment>friendDetails</comment>
+  </data>
   <data name="AVATAR_IMAGE_TEXTBLOCK_TEXT" xml:space="preserve">
     <value>Загрузить изоброжение на профель</value>
     <comment>registerView</comment>
@@ -129,17 +141,109 @@
     <value>Загрузить</value>
     <comment>registerView</comment>
   </data>
+  <data name="COLLABORATORS_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Участники</value>
+    <comment>TransactionDetails</comment>
+  </data>
+  <data name="COMMON_TRANSACTIONS_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Общие транзакции</value>
+    <comment>friendDetails</comment>
+  </data>
+  <data name="CONFIRM_BUTTON_CONTENT" xml:space="preserve">
+    <value>Потвердить</value>
+    <comment>AddTransaction</comment>
+  </data>
   <data name="CONFIRM_PASSWORD_PLACEHOLDER_TEXT" xml:space="preserve">
     <value>Повторите пароль</value>
     <comment>registerView</comment>
+  </data>
+  <data name="COST_TRANSACTION_PLACEHOLDER_TEXT" xml:space="preserve">
+    <value>Введите стоимость транзакции</value>
+    <comment>AddTransaction</comment>
+  </data>
+  <data name="CREDIT_CARD_RUN_TEXT" xml:space="preserve">
+    <value>Кредитная карта: </value>
+    <comment>TransactionDetails</comment>
+  </data>
+  <data name="DEADLINE_RUN_TEXT" xml:space="preserve">
+    <value>Дедлайн: </value>
+    <comment>TransactionDetails</comment>
+  </data>
+  <data name="DEBTERS_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Должники</value>
+    <comment>IncomingAndOutgoingView</comment>
+  </data>
+  <data name="DEBTS_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Долги</value>
+    <comment>friendDetails</comment>
   </data>
   <data name="DEFAULT_ERROR_TITLE" xml:space="preserve">
     <value>Ошибка</value>
     <comment>error</comment>
   </data>
+  <data name="DESCRIPTION_TRANSACTION_PLACEHOLDER_TEXT" xml:space="preserve">
+    <value>Введите описание транзакции</value>
+    <comment>AddTransaction</comment>
+  </data>
+  <data name="DONT_FORGET_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Не забудь</value>
+    <comment>homeView</comment>
+  </data>
+  <data name="EDIT_PROFILE_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>РЕДОКТИРОВАТЬ</value>
+    <comment>homeView</comment>
+  </data>
   <data name="EMAIL_PLACEHOLDER_TEXT" xml:space="preserve">
     <value>Введите електронную почту</value>
     <comment>loginView</comment>
+  </data>
+  <data name="EMAIL_RUN_TEXT" xml:space="preserve">
+    <value>Email: </value>
+    <comment>TransactionDetails</comment>
+  </data>
+  <data name="FINISHED_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Завершили</value>
+    <comment>TransactionDetails</comment>
+  </data>
+  <data name="FRIENDS_FRAME_TITLE" xml:space="preserve">
+    <value>Друзья</value>
+    <comment>titleFrame</comment>
+  </data>
+  <data name="FRIENDS_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Друзья</value>
+    <comment>AddTransaction</comment>
+  </data>
+  <data name="GIVE_RUN_TEXT" xml:space="preserve">
+    <value>Отдать (</value>
+    <comment>TransactionDetails</comment>
+  </data>
+  <data name="HOME_FRAME_TITLE" xml:space="preserve">
+    <value>Главная</value>
+    <comment>titleFrame</comment>
+  </data>
+  <data name="INCOMING_AND_OUTGOING_FRAME_TITLE" xml:space="preserve">
+    <value>Входящие и Исходящие</value>
+    <comment>titleFrame</comment>
+  </data>
+  <data name="INCOMING_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Входящие</value>
+    <comment>homeView</comment>
+  </data>
+  <data name="INPROGRESS_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>В процессе</value>
+    <comment>homeView</comment>
+  </data>
+  <data name="IS_COLLABORATOR_CHECKBOX_CONTENT" xml:space="preserve">
+    <value>Вы участник транзакции?</value>
+    <comment>AddTransaction</comment>
+  </data>
+  <data name="LENDS_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Займы</value>
+    <comment>friendDetails</comment>
+  </data>
+  <data name="LEND_PERSONS_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Отдолживишие</value>
+    <comment>IncomingAndOutgoingView</comment>
   </data>
   <data name="LOGIN_BUTTON_CONTENT" xml:space="preserve">
     <value>ЛОГИН</value>
@@ -157,6 +261,22 @@
     <value>Введите имя</value>
     <comment>registerView</comment>
   </data>
+  <data name="NOTIFACTIONS_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Уведомления</value>
+    <comment>homeView</comment>
+  </data>
+  <data name="NOT_COLLABORATORS_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Выбирите участников</value>
+    <comment>AddTransaction</comment>
+  </data>
+  <data name="NOT_FRIENDS_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>У вас нет друзей</value>
+    <comment>friendsView</comment>
+  </data>
+  <data name="NOT_TRANSACTIONS_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>У вас нет транзакций(</value>
+    <comment>Transactions</comment>
+  </data>
   <data name="NUMBER_CREDIT_CARD_PLACEHOLDER_TEXT" xml:space="preserve">
     <value>Введите номер кредитной карточки</value>
     <comment>registerView</comment>
@@ -168,6 +288,14 @@
   <data name="PASSWORD_PLACEHOLDER_TEXT" xml:space="preserve">
     <value>Введите пароль</value>
     <comment>loginView</comment>
+  </data>
+  <data name="PEOPLE_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Людей</value>
+    <comment>TransactionDetails</comment>
+  </data>
+  <data name="PHONE_RUN_TEXT" xml:space="preserve">
+    <value>Телефон: </value>
+    <comment>TransactionDetails</comment>
   </data>
   <data name="PROBLEM_SERVER_ERROR" xml:space="preserve">
     <value>Извиниет, проблемы с сервером</value>
@@ -189,8 +317,80 @@
     <value>Невозможно зарегестрироваться</value>
     <comment>error</comment>
   </data>
+  <data name="REMIND_ALL_BUTTON_CONTENT" xml:space="preserve">
+    <value>НАПОМНИТЬ ВСЕМ</value>
+    <comment>TransactionDetails</comment>
+  </data>
+  <data name="REMIND__BUTTON_CONTENT" xml:space="preserve">
+    <value>НАПОМНИТЬ</value>
+    <comment>TransactionDetails</comment>
+  </data>
+  <data name="REMOVE_BUTTON_CONTENT" xml:space="preserve">
+    <value>Удалить</value>
+    <comment>UserControl</comment>
+  </data>
+  <data name="REMOVE_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>УДАЛИТЬ</value>
+    <comment>homeView</comment>
+  </data>
+  <data name="SEARCH_FRAME_TITLE" xml:space="preserve">
+    <value>Поиск</value>
+    <comment>titleFrame</comment>
+  </data>
+  <data name="SEURCH_NOT_RESULTS_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Пользователей не найденно</value>
+    <comment>search</comment>
+  </data>
+  <data name="SEURCH_TEXTBOX_EMPTY_PLACEHOLDER_TEXT" xml:space="preserve">
+    <value>Введите запрос для поиска</value>
+    <comment>search</comment>
+  </data>
+  <data name="SORT_PARAMETER_CREATION_DATE" xml:space="preserve">
+    <value>Дата создания</value>
+    <comment>Transactions</comment>
+  </data>
+  <data name="SORT_PARAMETER_CREATION_USER_ROLE" xml:space="preserve">
+    <value>Пользоваетля роль</value>
+    <comment>Transactions</comment>
+  </data>
+  <data name="SORT_PARAMETER_NAME_TRANSACTION" xml:space="preserve">
+    <value>Имя</value>
+    <comment>Transactions</comment>
+  </data>
+  <data name="SORT_PARAMETER_SINGLE_COST" xml:space="preserve">
+    <value>Цена</value>
+    <comment>Transactions</comment>
+  </data>
+  <data name="SORT_PARAMETER_TRANSACTION_DATE" xml:space="preserve">
+    <value>Дедлайн</value>
+    <comment>Transactions</comment>
+  </data>
+  <data name="STATISTICS_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Статистика</value>
+    <comment>homeView</comment>
+  </data>
   <data name="SURNAME_PLACEHOLDER_TEXT" xml:space="preserve">
     <value>Введите фамилию</value>
     <comment>registerView</comment>
+  </data>
+  <data name="TITLE_TRANSACTION_PLACEHOLDER_TEXT" xml:space="preserve">
+    <value>Введите навание транзакции</value>
+    <comment>AddTransaction</comment>
+  </data>
+  <data name="TOTAL_DEBT_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Общий долг</value>
+    <comment>homeView</comment>
+  </data>
+  <data name="TOTAL_OWE_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Общий займ</value>
+    <comment>homeView</comment>
+  </data>
+  <data name="TRANSACTIONS_FRAME_TITLE" xml:space="preserve">
+    <value>Транзакции</value>
+    <comment>titleFrame</comment>
+  </data>
+  <data name="TRANSACTION_OWNER_TEXTBLOCK_TEXT" xml:space="preserve">
+    <value>Владелец транзакции</value>
+    <comment>TransactionDetails</comment>
   </data>
 </root>
