--- a/MoneySplitter.Win10/Strings/Ru.resw
+++ b/MoneySplitter.Win10/Strings/Ru.resw
@@ -256,7 +256,7 @@
     <comment>loginView</comment>
   </data>
   <data name="LOGIN_ERROR_DESCRIPTION" xml:space="preserve">
-    <value>Подалуйста проверьте логин и пароль</value>
+    <value>Пожалуйста, проверьте логин и пароль</value>
     <comment>error</comment>
   </data>
   <data name="LOGIN_ERROR_TITLE" xml:space="preserve">
