--- a/MoneySplitter.Win10/Strings/Ru.resw
+++ b/MoneySplitter.Win10/Strings/Ru.resw
@@ -271,6 +271,10 @@
     <value>Невозмжно войти</value>
     <comment>error</comment>
   </data>
+  <data name="LOG_OUT" xml:space="preserve">
+    <value>Выйти</value>
+    <comment>Log out</comment>
+  </data>
   <data name="NAME_PLACEHOLDER_TEXT" xml:space="preserve">
     <value>Введите имя</value>
     <comment>registerView</comment>
